test/org/midica/testfiles/failing/end-with-param.midica
INSTRUMENTS
	0 0 test1
	1 0 test2
END param
